# local-llm

./: .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  research-harness.env.example
SearXNG/: .env
SearXNG/searxng/: settings.yml
local-deep-research/: Dockerfile  README.md  pyproject.toml
local-deep-research/src/research_harness/: config.py  db.py  main.py  notifications.py  pipeline.py  providers.py  reporting.py  sources.py
local-deep-research/src/research_harness/static/: app.js  index.html  live-status.css  styles.css
local-deep-research/tests/: test_db.py  test_pipeline.py  test_reporting.py  test_sources.py
scripts/: verify-stack.ps1
