[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-deep-research-harness"
version = "0.1.0"
description = "A durable, local-first asynchronous deep research harness"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "feedparser>=6.0,<7",
  "httpx>=0.27,<1",
  "markdown>=3.7,<4",
  "pydantic-settings>=2.6,<3",
  "pypdf>=5,<7",
  "reportlab>=4.2,<5",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
browser = ["playwright>=1.49,<2"]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.24,<1"]

[project.scripts]
research-harness = "research_harness.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
research_harness = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
